# Labrat-Robot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
.ci/clang-14/: Dockerfile
.ci/clang-17/: Dockerfile  profile
.ci/clang-18/: Dockerfile  profile
.ci/doxygen/: Dockerfile  profile
.ci/gcc-12/: Dockerfile
.ci/gcc-13/: Dockerfile  profile
.ci/gcc-14/: Dockerfile
.clang/: .clang-format.in  .clang-tidy.in
.doxygen/pre/: doxyfile.in
.scripts/pre/: check-format.sh.in  coverage-report.sh.in  format-code.sh.in
cmake/: ClangFormat.cmake  ClangTidy.cmake  Config.cmake  CoverageReport.cmake  Doxygen.cmake  IncludeSymlinks.cmake  Options.cmake  VersionFromGit.cmake
docs/: doxyfile.in
docs/css/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css  header.html
docs/md/: _index.md
docs/md/advanced/: _index.md  filter.md  (+5 more)
examples/: .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/00-hello-world/: CMakeLists.txt  main.cpp
examples/01-logging/: CMakeLists.txt  main.cpp
examples/02-nodes/: CMakeLists.txt  main.cpp
examples/03-concurrency/: CMakeLists.txt  main.cpp
examples/03-threads/: CMakeLists.txt
examples/04-topics/: CMakeLists.txt  main.cpp
examples/04-topics/msg/: numbers.fbs
examples/05-conversions/: main.cpp
examples/05-services/: CMakeLists.txt  main.cpp
examples/05-services/msg/: request.fbs  response.fbs
examples/06-config/: CMakeLists.txt  config.yaml  main.cpp
examples/06-plugins/: CMakeLists.txt  main.cpp
examples/07-config/: main.cpp
examples/07-conversions/: CMakeLists.txt  main.cpp
examples/07-conversions/msg/: number.fbs
examples/07-plugins/: CMakeLists.txt  main.cpp
examples/07-plugins/msg/: vector.fbs
examples/08-conversions/: CMakeLists.txt  main.cpp
examples/09-moves/: CMakeLists.txt  main.cpp
examples/09-moves/msg/: array.fbs
examples/10-cluster/: CMakeLists.txt  main.cpp
examples/10-time/: CMakeLists.txt  main.cpp
examples/10-time-synchronized/: CMakeLists.txt  main.cpp
examples/11-time-stepped/: CMakeLists.txt  main.cpp
examples/src/: CMakeLists.txt
examples/src/mavlink-mcap/: CMakeLists.txt
install/: Config.cmake.in  GenerateFlatbuffer.cmake  Launcher.cmake  launcher.sh.in
integrations/gazebo/: .gitignore  CMakeLists.txt  README.md  conanfile.py
integrations/gazebo/cmake/: Config.cmake
integrations/gazebo/src/: CMakeLists.txt  bridge.cpp  bridge.hpp  protocol.hpp
integrations/gazebo/testing/: .gitignore  CMakeLists.txt  conanfile.py
integrations/gazebo/testing/data/: world.sdf
integrations/gazebo/testing/src/: CMakeLists.txt  main.cpp
robot/: CMakeLists.txt  exception.cpp  exception.hpp  logger.cpp  logger.hpp  manager copy.cpp  manager.cpp  manager.hpp  message.cpp  message.hpp  node.hpp  plugin.hpp  service.cpp  service.hpp  topic.cpp  topic.hpp
robot/examples/: CMakeLists.txt
robot/msg/: CMakeLists.txt  log.hpp  log.proto  network.cpp  network.hpp  test.proto
robot/plugins/: CMakeLists.txt
robot/test/: CMakeLists.txt  helper.hpp  mcap.cpp  network.cpp  performance.cpp  setup.cpp  stress.cpp
robot/test/protobuf/: test.proto
robot/utils/: CMakeLists.txt  atomic.hpp  concepts.hpp  final_ptr.hpp  types.hpp
src/: CMakeLists.txt  base.hpp  clock.cpp  clock.hpp  cluster.cpp  cluster.hpp  config.cpp  config.hpp  exception.cpp  exception.hpp  filter.hpp  info.hpp  logger.cpp  logger.hpp  manager.cpp  manager.hpp  message.cpp  message.hpp  node.hpp  plugin.hpp  service.cpp  service.hpp  topic.cpp  topic.hpp
src/examples/mavlink-mcap/: CMakeLists.txt  main.cpp
src/msg/: CMakeLists.txt  foxglove  log.fbs  log.proto  test.fbs  test.proto  timestamp.fbs  timesync.fbs  timesync_status.fbs
src/plugins/: CMakeLists.txt
src/plugins/foxglove-ws/: CMakeLists.txt  server.cpp  server.hpp
src/plugins/gazebo-time/: CMakeLists.txt  protocol.hpp  time.cpp  time.hpp
src/plugins/gazebo-time/msg/: gazebo_time.fbs
src/plugins/linux/: CMakeLists.txt  stats.cpp  stats.hpp
src/plugins/linux/msg/: CMakeLists.txt  cpu.fbs  disks.fbs  memory.fbs  process.fbs
src/plugins/mavlink/: CMakeLists.txt  connection.hpp  conversions.cpp  node.cpp  node.hpp  serial_connection.cpp  serial_connection.hpp  udp_connection.cpp  udp_connection.hpp
src/plugins/mavlink/msg/: CMakeLists.txt  actuator_control_target.fbs  actuator_control_target.proto  actuator_output_status.fbs  adsb_vehicle.fbs  adsb_vehicle.proto  ais_vessel.fbs  altitude.fbs  altitude.proto  att_pos_mocap.fbs  att_pos_mocap.proto  attitude.fbs  attitude_quaternion.fbs  attitude_quaternion.proto  attitude_quaternion_cov.fbs  attitude_target.fbs  auth_key.fbs  auth_key.proto  autopilot_state_for_gimbal_device.fbs  autopilot_version.fbs  autopilot_version.proto  battery_info.fbs  battery_status.fbs  battery_status.proto  button_change.fbs  camera_capture_status.fbs  camera_capture_status.proto  camera_fov_status.fbs  camera_fov_status.proto  camera_image_captured.fbs  camera_information.fbs  camera_settings.fbs  camera_settings.proto  camera_tracking_geo_status.fbs  camera_tracking_image_status.fbs  camera_trigger.fbs  camera_trigger.proto  can_filter_modify.fbs  can_frame.fbs  can_frame.proto  (+302 more)
src/plugins/mcap/: CMakeLists.txt  recorder.cpp  recorder.hpp
src/plugins/serial-bridge/: CMakeLists.txt  node.cpp  node.hpp
src/plugins/udp-bridge/: CMakeLists.txt  node.cpp  node.hpp
src/test/: CMakeLists.txt  mcap.cpp  setup.cpp
src/utils/: CMakeLists.txt  async.hpp  atomic.hpp  cleanup.hpp  concepts.hpp  condition.hpp  fifo.hpp  final_ptr.hpp  performance.cpp  performance.hpp  serial.cpp  serial.hpp  signal.cpp  signal.hpp  string.cpp  string.hpp  thread.hpp  timer_thread.hpp  types.hpp
testing/: .gitignore  CMakeLists.txt  conanfile.py
testing/data/: test_config.yaml
testing/src/: clock.cpp  config.cpp  deadlock.cpp  helper.cpp  helper.hpp  main.cpp  manager.cpp  mcap.cpp  multisetup.cpp  performance.cpp  semantics.cpp  serial-bridge.cpp  setup.cpp  stress.cpp  thread.cpp  timestamp.cpp  udp-bridge.cpp
toolchains/clang/: native.cmake
toolchains/gnu/: native.cmake
(+127 files in other folders)
