cmake_minimum_required(VERSION 3.28.1)

project(lbot-example CXX)

# Add examples
add_subdirectory(00-hello-world)
add_subdirectory(01-logging)
add_subdirectory(02-nodes)
add_subdirectory(03-concurrency)
add_subdirectory(04-topics)
add_subdirectory(05-services)
add_subdirectory(06-config)
add_subdirectory(07-plugins)
add_subdirectory(08-conversions)
add_subdirectory(09-moves)
add_subdirectory(10-cluster)
